<resources>
    <string name="app_name">GWIZD</string>
    <string name="cameraBtnLabel">Take a photo</string>
    <string name="photoDescription">Animal photo</string>

    <string name="animalTypeLabel">Animal type:</string>
    <string name="locationLabel">Location:</string>
    <string name="descriptionLabel">Description: </string>
    <string name="phoneLabel">Phone: </string>

    <string name="animalType">Animal</string>
    <string name="location">Location</string>
    <string name="descriptionValue">Medium size animal</string>
    <string name="phoneValue">+48 576 345 002</string>

    <string name="domesticLabel">Domestic</string>
    <string name="wildLabel">Wild</string>
    <string name="deadLabel">Dead</string>
    <string name="animalHurtLabel">Animal hurt</string>
    <string name="submitText">Submit</string>
    <string name="inputViewTip"> </string>

    <string name="logoLabel">logo</string>
    <string name="addButtonLabel">Add</string>
    <string name="darkModeIcon">Dark Mode Icon</string>
    <string name="darkModeLabel">Dark Mode</string>
    <string name="timestampLabel">Timestamp</string>
    <string name="animalTypeStatusLabel">Animal Type and Status</string>
    <string name="itemLocationLabel">Location</string>

    <!--  user profile mock information  -->
    <string name="userName">John Doe</string>
    <string name="userPhoneNumber">+48123456789</string>
    <string name="todoLabel">TODO</string>
    <string name="reportsNumber">Reports: 0</string>
</resources>